--- a/modeling/modeling.tex
+++ b/modeling/modeling.tex
@@ -18,6 +18,7 @@
 
 \appendix
 \input{./sections/harmonic}
+\input{./sections/da}
 
 %\bibliographystyle{plainnat}
 %\bibliography{./sections/biblio}
