--- a/modeling/preambule/rmbdmath.sty
+++ b/modeling/preambule/rmbdmath.sty
@@ -52,6 +52,9 @@
 \newcommand{\ndx}[1]{\dx^{#1}}      % n-th differential operator
 \newcommand{\iod}[1]{\dx_{#1}}      % indexed ordinary derivative
 \newcommand{\ipd}[1]{\partial_{#1}} % indexed partial derivative
+%
+\newcommand{\nipd}[3]{\partial^{#1}_{{#3}^{#1}}{#2}} % n index partial derivative
+%
 \newcommand{\igd}[1]{\partial_{#1}} % indexed geometric derivative
 \newcommand{\trate}{\iod{t}}        % time rate
 %
