--- a/modeling/preambule/rmbdphysics.sty
+++ b/modeling/preambule/rmbdphysics.sty
@@ -12,6 +12,8 @@
 \newcommand{\grav}{g}       % free fall acceleration
 \newcommand{\dens}{\rho}    % density
 \newcommand{\dynvis}{\mu}   % dynamic viscosity
+\newcommand{\press}{p}      % pressure
+\newcommand{\minert}{i}     % moment of inertia
 
 %%% Indexed mechanics
 \newcommand{\fpos}[1]{\fvec{\pos}{#1}} % indexed position (contravariant)
@@ -43,6 +45,7 @@
 %\newcommand{\kplanck}{h\txt{plk}}   % Planck constant
 %\newcommand{\klight}{c_0}           % speed of light in vacuum
 %\newcommand{\kstef}{\sigma\txt{sb}} % Stefan-Boltzmann constant
+\newcommand{\kgrav}{g\txt{new}}      % gravitational constant
 
 %%% Dim. analysis
 %\DeclareMathOperator{\unit}{unit}   % unit of a quantity
