--- a/modeling/sections/background.tex
+++ b/modeling/sections/background.tex
@@ -20,6 +20,9 @@
 %
 \newcommand{\scovel}{\dt{\scpq{\odisp}}}  % scaled osc. velocity
 \newcommand{\scoacc}{\ddt{\scpq{\odisp}}} % scaled osc. acceleration
+%
+\newcommand{\angfreq}{\omega} % angular frequency
+
 
 \section{Background}
 In this section, we set the description of a physical phenomenon: the motion of a gravitational pendulum. We focus on answer the questions: what is a pendulum? what is a gravitational pendulum? How the pendulum is set into motion? What keeps the pendulum moving? What forces act on the pendulum that may damp its motion? We also provide a bit of some historical information about it.
