edition, typos, new sections added: diffusion, projectile

--- a/approximations/approximations.tex
+++ b/approximations/approximations.tex
@@ -15,6 +15,8 @@
 \input{./sections/intro}
 \input{./sections/pressure}
 \input{./sections/energy}
+\input{./sections/projectile}
+\input{./sections/diffusion}
 
 %\appendix
 
