--- a/approximations/preambule/rmbdarticle.sty
+++ b/approximations/preambule/rmbdarticle.sty
@@ -59,7 +59,8 @@
 %%% siunitx setup
 \sisetup{
 %separate-uncertainty = true, % true: (...\pm...). false: ...(...)
-input-symbols = \pi\tau
+input-symbols = \pi\tau,
+exponent-product = \cdot  % use cdot instead of times in sci notation
 }%
 %%%
 
