--- a/approximations/preambule/rmbdmath.sty
+++ b/approximations/preambule/rmbdmath.sty
@@ -18,6 +18,9 @@
 %\newcommand{\nespace}[1]{\nset{\espace}{#1}}          % n-dim Euclidean space
 \newcommand{\tuple}[1]{\left[{#1}\right]}
 
+%%% Interval
+\newcommand{\ooint}[1]{\left]{#1}\right[} % open open interval
+
 %%% Functions
 \newcommand{\vat}[1]{\!\tuple{#1}} % function value at
 
@@ -28,7 +31,7 @@
 %\newcommand{\surf}{s}         % surface
 \newcommand{\length}{l}        % length
 %\newcommand{\diam}{d}         % diameter
-%\newcommand{\radius}{r}       % radius
+\newcommand{\radius}{r}        % radius
 
 %%% Geometric algebra
 %\newcommand{\inv}[1]{{#1}^{-1}} % inverse
@@ -46,13 +49,13 @@
 %\newcommand{\dirder}[2]{\gder_{#1}{#2}} % directional derivative
 
 %%% Derivatives
-%\newcommand{\dt}[1]{\dot{#1}}       % dot derivative
-%\newcommand{\ddt}[1]{\ddot{#1}}     % dot dot derivative
-%\newcommand{\dx}{\text{d}}          % differential operator
+\newcommand{\dt}[1]{\dot{#1}}        % dot derivative
+\newcommand{\ddt}[1]{\ddot{#1}}      % dot dot derivative
+\newcommand{\dx}{\text{d}}           % differential operator
 %\newcommand{\Dx}{\Delta}            % difference operator
 %\newcommand{\ndx}[1]{\dx^{#1}}      % n-th differential operator
 %\newcommand{\iod}[1]{\dx_{#1}}      % indexed ordinary derivative
-%\newcommand{\ipd}[1]{\partial_{#1}} % indexed partial derivative
+\newcommand{\ipd}[1]{\partial_{#1}}  % indexed partial derivative
 %\newcommand{\igd}[1]{\partial_{#1}} % indexed geometric derivative
 %\newcommand{\trate}{\iod{t}}        % time rate
 %
