--- a/approximations/preambule/rmbdphysics.sty
+++ b/approximations/preambule/rmbdphysics.sty
@@ -10,7 +10,7 @@
 %\newcommand{\mom}{p}        % momentum
 \newcommand{\force}{f}       % force
 \newcommand{\press}{p}       % pressure
-%\newcommand{\grav}{g}       % free fall acceleration
+\newcommand{\grav}{g}        % free fall acceleration
 %\newcommand{\dens}{\rho}    % density
 %\newcommand{\dynvis}{\mu}   % dynamic viscosity
 
@@ -38,7 +38,9 @@
 %\newcommand{\igforce}[1]{\rvec{\force}{#1}}  % indexed gen. force
 
 %%% Mass transport
-\newcommand{\amount}{n} % chemical amount
+\newcommand{\amount}{n}   % chemical amount
+\newcommand{\conc}{c}     % concentration
+\newcommand{\kmdiff}{\nu} % mass diffusion coefficient
 
 %%% Energy transport
 \newcommand{\temp}{\theta}          % temperature
@@ -62,6 +64,7 @@
 \newcommand{\phdimtemp}{\Theta}      % physical dimension of temperature
 \newcommand{\chpq}[1]{{#1}_{c}}      % characteristic physical quantity
 \newcommand{\scpq}[1]{\overline{#1}} % scaled physical quantity
+\newcommand{\smpq}{\epsilon}         % small physical quantity
 \newcommand{\kdim}{\Pi}              % dimless quantity
 \newcommand{\kdimf}{\phi_{\pi}}      % dimensionless function
 
